# cshare

./: .gitmodules  LICENSE  README.md  docker-compose.yml  init.py  package.json  pnpm-lock.yaml  pom.xml
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx
frontend/src/app/[username]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/elements/: index.ts
frontend/src/components/modules/: index.ts
frontend/src/components/queries/: auth.interface.ts  auth.query.ts  index.ts
frontend/src/components/stores/: auth.interface.ts  auth.store.ts  index.ts
frontend/src/lib/: auth.ts
frontend/src/types/: index.ts  post.ts  user.ts
image-to-text/consumer/: pyproject.toml
image-to-text/consumer/consumer/: main.py
image-to-text/consumer/consumer/consumers/: __init__.py  image_to_text.py
image-to-text/consumer/consumer/models/: content_resources.py  database_event.py  image_to_text_result.py
image-to-text/consumer/consumer/publishers/: __init__.py
image-to-text/service/: pyproject.toml
image-to-text/service/service/: service.py
infrastructure/: docker-compose.yml  init.py
infrastructure/config/: debezium.conf
infrastructure/scripts/: debezium-connector-init.sh
search/: .gitignore  Taskfile.yml  pom.xml
src/app/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/components/elements/: index.ts
src/components/modules/: index.ts
src/config/: index.ts
src/lib/api/: auth.api.ts
src/main/resources/: application.properties
user/: Taskfile.yml  pom.xml
(+131 files in other folders)
